gcc/testsuite/rust/rustc/ui/closures/issue-81700-mut-borrow_dg.rs
fn foo(x: &mut u32) {
    let bar = || { foo(x); };
    bar(); // { dg-error ".E0596." "" { target *-*-* } }
}
fn main() {}

